--- a/EvalucionProgreso1/appsettings.json
+++ b/EvalucionProgreso1/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Daniel_Diaz_Progreso_1": "Server=(localdb)\\mssqllocaldb;Database=Daniel_Diaz_Progreso_1-380ee628-5693-4e1e-bb9d-4bc28808576a;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
